--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "pristin",
+  "name": "pristine",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev": "lite-server --baseDir=dist/pritin"
   },
   "private": true,
   "dependencies": {
@@ -21,8 +22,15 @@
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "angular-countdown-timer": "0.0.1",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
+    "lite-server": "^2.5.4",
+    "moment": "^2.29.1",
+    "ng-connection-service": "^1.0.4",
+    "ng2-date-countdown": "^1.1.3",
+    "ngx-countdown": "^10.0.1",
+    "ngx-countdown-timer": "^0.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
